// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render empty 1`] = `
<div
  className="p-2 flex h-full"
>
  <div
    className="p-2"
  >
    events.empty
  </div>
</div>
`;

exports[`should render events 1`] = `
<div
  className="p-2 flex h-full"
>
  <div
    className="w-full overflow-auto"
  />
</div>
`;

exports[`should render loading 1`] = `
<div
  className="p-2 flex h-full"
>
  <div
    className="flex flex-1 align-center justify-center"
  >
    <div
      className="ant-spin ant-spin-spinning !flex justify-center items-center "
    >
      <span
        className="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          className="ant-spin-dot-item"
        />
        <i
          className="ant-spin-dot-item"
        />
        <i
          className="ant-spin-dot-item"
        />
        <i
          className="ant-spin-dot-item"
        />
      </span>
    </div>
  </div>
</div>
`;
